tests/endtoend/failure/expected/error_for1.compile.out
error_for1.silly:5:11: error: Undeclared variable j
    5 |     PRINT j;
      |           ^
